Revert "8256299: Implement JEP 396: Strongly Encapsulate JDK Internals by Default"
This reverts commit ed4c4ee73b5bc7f08495268a7e8e7bce3f265747.